<package>
  <name>abb</name>
  <version>1.0.0</version>
  <description>abb</description>
  <maintainer email="sedwards@swri.org">Shaun Edwards</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/industrial_core</url>
  <author email="sedwards@swri.org">Shaun Edwards</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>irb_5400_arm_navigation</run_depend>
  <run_depend>abb_common</run_depend>
  <run_depend>irb_2400_arm_navigation</run_depend>
  <run_depend>abb_moveit_plugins</run_depend>


  <export>
    <metapackage/>
  </export>
</package>
