<package>
  <name>abb</name>
  <version>1.2.1</version>
  <description>ROS-Industrial support for ABB manipulators (metapackage).</description>
  <maintainer email="shaun.edwards@gmail.com">Shaun Edwards</maintainer>
  <license>BSD</license>
  <license>Apache 2.0</license>
  <url type="website">http://ros.org/wiki/abb</url>
  <url type="repository">https://github.com/ros-industrial/abb</url>
  <url type="bugtracker">https://github.com/ros-industrial/abb/issues</url>
  <author email="shaun.edwards@gmail.com">Shaun Edwards</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>abb_driver</run_depend>
  <run_depend>abb_irb2400_moveit_config</run_depend>
  <run_depend>abb_irb2400_moveit_plugins</run_depend>
  <run_depend>abb_irb2400_support</run_depend>
  <run_depend>abb_irb5400_support</run_depend>
  <run_depend>abb_irb6600_support</run_depend>
  <run_depend>abb_irb6640_support</run_depend>
  <run_depend>abb_irb6640_moveit_config</run_depend>
  <run_depend>abb_resources</run_depend>


  <export>
    <metapackage/>
  </export>
</package>
