<?xml version="1.0"?>
<package format="2">
  <name>abb</name>
  <version>1.2.1</version>
  <description>ROS-Industrial support for ABB manipulators (metapackage).</description>
  <author>Shaun Edwards</author>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong (Southwest Research Institute)</maintainer>
  <license>BSD</license>
  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/abb</url>
  <url type="repository">https://github.com/ros-industrial/abb</url>
  <url type="bugtracker">https://github.com/ros-industrial/abb/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>abb_driver</exec_depend>
  <exec_depend>abb_irb2400_moveit_config</exec_depend>
  <exec_depend>abb_irb2400_moveit_plugins</exec_depend>
  <exec_depend>abb_irb2400_support</exec_depend>
  <exec_depend>abb_irb4400_support</exec_depend>
  <exec_depend>abb_irb5400_support</exec_depend>
  <exec_depend>abb_irb6600_support</exec_depend>
  <exec_depend>abb_irb6640_support</exec_depend>
  <exec_depend>abb_irb6640_moveit_config</exec_depend>
  <exec_depend>abb_resources</exec_depend>

  <export>
    <metapackage/>
    <architecture_independent/>
  </export>
</package>
