<package>
  <name>abb_common</name>
  <version>1.1.6</version>
  <description>abb_common (deprecated)</description>
  <maintainer email="sedwards@swri.org">Shaun Edwards</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/industrial_core</url>
  <author email="sedwards@swri.org">Shaun Edwards</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>industrial_robot_client</build_depend>
  <build_depend>simple_message</build_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>industrial_robot_client</run_depend>
  <run_depend>simple_message</run_depend>
  <run_depend>xacro</run_depend>

  <export>
    <deprecated>This package has been deprecated in Hydro, and will be removed in Indigo. Please use the abb_driver or the appropriate support package as a replacement.</deprecated>
  </export>
</package>
