<package>
  <name>abb_irb4400_support</name>
  <version>0.1.0</version>
  <description>
    <p>
      ROS Industrial support for the ABB IRB4400 (and variants).
    </p>
    <p>
      This package contains configuration data, 3D models and launch files 
      for ABB IRB4400 manipulators. This currently includes the L30.
    </p>
    <p>
      Joint limits and max joint velocities are based on the information in 
      the ABB data sheets.  All URDFs / XACROs are based on the 
      default motion and joint velocity limits, unless noted otherwise (ie: 
      no support for high speed joints, extended / limited motion ranges or 
      other options).
    </p>
    <p>
      Before using any of the configuration files and / or meshes included 
      in this package, be sure to check they are correct for the particular 
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author email="ds____on@swri.org">Dan Solomon (Southwest Research Institute)</author>
  <maintainer email="sedewards@swri.org">Shaun Edwards (Southwest Research Institute)</maintainer>
  <license>Apache2</license>

  <url type="website">http://ros.org/wiki/abb_irb4400_support</url>
  <url type="bugtracker">https://github.com/ros-industrial/abb_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/abb_experimental</url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Typical run depends, not yet populated
  <run_depend>abb_assets</run_depend>
  <run_depend>abb_driver</run_depend>
  -->

</package>
