<package>
  <name>irb_2400_arm_navigation</name>
  <version>1.0.0</version>
  <description>irb_2400_arm_navigation</description>
  <maintainer email="sedwards@swri.org">Shaun Edwards</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/industrial_core</url>
  <author email="sedwards@swri.org">Shaun Edwards</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>planning_environment</run_depend>
  <run_depend>kinematics_base</run_depend>
  <run_depend>arm_kinematics_constraint_aware</run_depend>
  <run_depend>ompl_ros_interface</run_depend>
  <run_depend>trajectory_filter_server</run_depend>
  <run_depend>constraint_aware_spline_smoother</run_depend>
  <run_depend>move_arm</run_depend>
  <run_depend>warehouse_ros</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>interpolated_ik_motion_planner</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>move_arm_warehouse</run_depend>

  <export>
    <kinematics_base plugin="${prefix}/kinematics_plugins.xml"/>
  </export>
</package>
